# basket-utils

./: calendario.ipynb  gradio_app.py  pdf_parsing.py  pyproject.toml  streamlit_app.py
data/: calendario.csv
notebooks/: calendario.ipynb
pages/: fip_calendar.py  game_schedule.py  home.py
scripts/: fip_online_minibasket_filter.js
